Fixed contrast issues

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -35,7 +35,7 @@
         @apply mb-2;
     }
     a {
-        @apply text-blue-500;
+        @apply text-blue-600;
     }
     a:hover {
         @apply underline;
